--- a/index.html
+++ b/index.html
@@ -1,64 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>BIRTHDAY FORM</title>
-    <link rel="stylesheet" types="text/css" href="style.css" />
-    <link rel="stylesheet" types="text/css" href="bootstrap.css" />
-    <script src="script.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Your Akan Names.</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
+      <div class="header">
+        <h1>Akan Names</h1>
+        <p>...Of Ghanaian Culture</p>
+      </div>
+
       <div class="row">
-        <h1>AKAN NAMING FORM</h1>
-        <p>
-          in this landing page im creating birthday form which allows users to
-          enter their valid birth day, month, year and give them akan name.
-        </p>
-        <form>
-          <table>
-          <tr>
-              <td>
-                  day
-                  <td>
-          
-          <input type="number" id="name" name="day" /><br />
-          </td>
-          </td>
-        </tr>
-        <tr>
-          <td>
-              month
-              <td>
-          <input type="number" id="name" name="month" /><br />
-        </td>
-        </td>
-        </tr>
-        <tr>
-            <td>
-                year
-                <td>
-          
-          <input type="number" id="name" name="year" /><br />
-        </td>
-        </td>
-        </tr>
-        <tr>
-            <td>
-                gender
-                <td>
-          <input type="radio" name="gender" value="male" /> Male<br />
-          <input type="radio" name="gender" value="female" /> Female<br />
-          </td>
-        </td>
-        </tr>
-        <tr>
-            <td>
-          <input type="submit" />
-        </td>
-        </tr>
-        </table>
-        </form>
+        <div class="card">
+          <p class="history">
+            The Akan naming system is of the the Akan people of Ghana. <br />
+            The Akan people often name their children after the day of the week
+            they are born. Based on these names; that are bestowed meaning
+            concerning the soul and the character of the person, a person is
+            easily recognised in their community <br />
+            This Webpage generates an Akan name for you, Ghanaian or not. <br />
+            <b>Just fill out below:</b>
+          </p>
+
+          <div class="form">
+            <h3 class="history">Want to know your Akan Name:</h3>
+
+            <form
+              name="userinput"
+              onsubmit="event.preventDefault(); validateFunction()"
+            >
+              <input type="date" name="date" />
+              <select name="gender" id="gender">
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+              </select>
+              <input type="submit" value="Submit" />
+            </form>
+          </div>
+        </div>
       </div>
     </div>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
