--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="header">
-        <h1>Akan Names</h1>
-        <p>...Of Ghanaian Culture</p>
-      </div>
-
-      <div class="row">
-        <div class="card">
-          <p class="history">
-            The Akan naming system is of the the Akan people of Ghana. <br />
-            The Akan people often name their children after the day of the week
-            they are born. Based on these names; that are bestowed meaning
-            concerning the soul and the character of the person, a person is
-            easily recognised in their community <br />
-            This Webpage generates an Akan name for you, Ghanaian or not. <br />
-            <b>Just fill out below:</b>
-          </p>
-
+          <div class="container maincontainer">
+          <div class="jumbotron maincontainer">
+           
+                <h1>AKAN NAMING FORM</h1>
+                <p>
+                  This application is structed to help the user to assign nouns
+                  to their children depending on their gender.The names are derived from
+                  the day of birth, that are bestowed meaning concerning the soul and
+                  the character of the person, a person is easily recognised in their
+                  community This Webpage generates an Akan name for you, Ghanaian or
+                  not.
+                </p>
+                </div>  
+              
+    
           <div class="form">
             <h3 class="history">Want to know your Akan Name:</h3>
 
