--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
   </head>
   <body>
     <div class="container-fluid">
-          <div class="container maincontainer">
+          <div class="container">
           <div class="jumbotron maincontainer">
            
                 <h1>AKAN NAMING FORM</h1>
                 <p>
-                  This application is structed to help the user to assign nouns
-                  to their children depending on their gender.The names are derived from
-                  the day of birth, that are bestowed meaning concerning the soul and
-                  the character of the person, a person is easily recognised in their
-                  community This Webpage generates an Akan name for you, Ghanaian or
-                  not.
+                  This application is structed to help the user to assign noun to their children depending on their gender.The names are derived from
+                  the day of birth, that are bestowed meaning concerning the soul the character of the person, a person is easily recognised in their
+                  community This Webpage generates an Akan name for you, Ghanaian or not.
                 </p>
                 </div>  
               
