--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
       </form>
     </div>
 
-    <script src="js/scripts.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
