--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="container">
-      <div class="jumbotron ">
+      <div class="jumbotron mystyle ">
         <h1>AKAN NAMING FORM</h1>
         <p>
           This application is structed to help the user to assign noun
@@ -20,14 +20,16 @@
         </p>
       </div>
     </div>
-
+    <div class="container">
+      <div class="alert-success alert alertme jumbotron" id="myalert">
+        <p class="text-center">
+          You were born on <span id="dayweek"></span>, and your Akan Name is
+          <span id="akanname"></span>
+        </p>
+      </div>
+    </div>
     <div class="form-group">
-      <form
-        name="ghana-forms"
-        name="userinput"
-        onsubmit="event.preventDefault(); 
-      validateFunction()"
-      >
+      <form name="ghana-forms" name="userinput">
         Enter day:<br />
         <input
           type="number"
@@ -60,10 +62,18 @@
         /><br />
         <br /><br />
         Choose your gender:<br />
-        <input type="radio" id="gender" name="gender" value="male" /> Male<br />
-        <input type="radio" name="gender" value="female" /> Female<br />
+        <input type="radio" id="male" name="gender" value="male" /> Male
         <br />
-        <input type="submit" value="Submit" onclick="result()" />
+        <input
+          type="radio"
+          id="female"
+          name="gender"
+          value="female"
+        />Female<br />
+        <br />
+        <a href="#" id="submit" onclick="result()" class="btn btn-primary"
+          >Submit</a
+        >
       </form>
     </div>
 
