made changes in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BIRTHDAY FORM</title>
+    <title>AKAN NAMING SYSTEM</title>
     <link rel="stylesheet" types="text/css" href="css/style.css" />
     <link rel="stylesheet" types="text/css" href="css/bootstrap.css" />
   </head>
@@ -9,10 +9,8 @@
   <body>
     <div class="container">
       <div class="jumbotron mystyle ">
-        <h1>AKAN NAMING FORM</h1>
-        <p>
-      
-        </p>
+        <h1>AKAN NAMING SYSTEM</h1>
+        <p></p>
       </div>
     </div>
     <div class="container">
