add background image in style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="jumbotron mystyle ">
         <h1>AKAN NAMING SYSTEM</h1>
         <p></p>
