--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <div class="container-fluid">
       <div class="jumbotron mystyle ">
         <h1>AKAN NAMING SYSTEM</h1>
-        <p></p>
+        <p>
+          This application is structed to help the Ghananian community to assign
+          nouns to their children depending on their gender. The names are
+          derived from the day of birthday
+          that are bestowed meaning concerning the soul the character of the person,
+           a person is easily recognised in theircommunity.This Webpage generates an Akan name for you, Ghanaian or
+          not
+        </p>
       </div>
     </div>
     <div class="container">
