fixed myalert btn

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </p>
       </div>
     </div>
-    <div class="container">
+    <div class="container" id="allme">
       <div class="alert-success alert alertme jumbotron" id="myalert">
         <p class="text-center">
           You were born on <span id="dayweek"></span>, and your Akan Name is
